Add Atomic-OS Version
Rename modversion

Change-Id: I6557d5aa68a3ad00166cdd2b8951f425ad7800df
Signed-off-by: AKabhishek <abhishekkaushik.star@gmail.com>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -73,6 +73,12 @@
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
 
+        <!-- Atomic-OS version -->
+        <Preference android:key="aos_mod_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/aos_mod_version"
+                android:summary="@string/mod_version_default" />
+
         <!-- Security patch level -->
         <PreferenceScreen android:key="security_patch"
                 android:title="@string/security_patch"
