Integrate Atomic-OS Laboratory into Settings
Change-Id: Id4e5367bab5826bfc8bced5684fc2e599f8140c4
Signed-off-by: AKabhishek <abhishekkaushik.star@gmail.com>

--- a/res/values/aos_strings.xml
+++ b/res/values/aos_strings.xml
@@ -20,4 +20,8 @@
     <string name="aos_mod_version">Atomic-OS version</string>
     <string name="mod_version_default">Unknown</string>
 
+    <!-- Atomic-OS Laboratory -->
+    <string name="laboratory_title">Laboratory</string>
+    <string name="header_category_custom">Customization</string>
+
 </resources>
