--- a/res/values/aos_dimens.xml
+++ b/res/values/aos_dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2017 Atomic OS Project
+     Copyright (C) 2017 Paranoid Android
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -19,4 +20,7 @@
     <dimen name="alert_dialog_padding_material">20dp</dimen>
     <dimen name="oval_notification_size">26dp</dimen>
 
+    <!-- Color engine -->
+    <dimen name="theme_preview_actionbar_size">15dp</dimen>
+    <dimen name="theme_color_margin_side">20dp</dimen>
 </resources>
