--- a/res/drawable/ic_settings_laboratory.xml
+++ b/res/drawable/ic_settings_laboratory.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
-
+<!--suppress AndroidUnknownAttribute -->
+<vector xmlns:api24="http://schemas.android.com/apk/res/android" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:width="24dp"
+    android:height="24dp"
+    android:tint="?android:attr/colorAccent">
     <path
-        android:fillColor="#000000"
+        android:pathData="M0.5 15.5l6 -6 0 -5 -2 -4 9 0 -2 4 0 5 6 6 -4.25 8 -8.5 0z"
         android:strokeWidth="1"
-        android:pathData="M582 1780 c-47 -29 -72 -76 -72 -135 0 -48 12 -71 185 -370 l184 -320 1 -92 0 -93
--25 0 c-14 0 -37 -11 -50 -25 -33 -32 -33 -78 0 -110 24 -25 26 -25 210 -25 184 0
-186 0 210 25 33 32 33 78 0 110 -13 14 -33 25 -45 25 -19 0 -20 6 -20 101 l0 100
-180 312 c168 291 180 315 180 362 0 59 -25 106 -72 135 -31 19 -51 20 -433 20 -382
-0 -402 -1 -433 -20z m515 -370 c8 0 32 -18 54 -40 43 -43 55 -46 106 -28 18 6 35 9
-38 6 3 -3 -42 -88 -100 -189 l-105 -183 0 -116 c0 -131 6 -147 60 -152 23 -2 35 -8
-35 -18 0 -13 -26 -15 -170 -15 -144 0 -170 2 -170 15 0 10 13 16 40 18 46 4 55 14
-55 65 l0 37 50 0 c37 0 52 4 58 18 17 31 3 42 -54 42 -53 0 -54 0 -54 30 0 30 0 30
-56 30 54 0 55 0 52 28 -3 25 -6 27 -58 30 -37 2 -59 8 -67 19 -21 28 -15 33 41 33
-36 0 60 5 70 16 20 19 20 19 0 38 -11 12 -36 16 -94 16 -68 0 -81 3 -90 19 -5 11
--10 22 -10 25 0 3 46 7 103 8 l102 3 3 28 3 27 -125 0 -126 0 -20 33 c-11 17 -20
-35 -20 40 0 13 60 7 92 -9 45 -23 76 -11 97 39 26 60 83 103 119 91 8 -2 20 -4 29
--4z" />
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"
+        android:strokeColor="#58595b" />
     <path
-        android:fillColor="#000000"
+        android:pathData="M16.5 11.5l0 -4 -1 -4 8 0 -1 4 0 14 -3 2 -3 -2"
         android:strokeWidth="1"
-        android:pathData="M1015 558 c-31 -17 -45 -39 -45 -74 0 -46 9 -63 41 -79 42 -22 67 -18 100 14 39 40
-39 82 0 122 -31 30 -62 36 -96 17z m56 -92 c-16 -19 -41 -10 -41 14 0 24 21 31 39
-14 11 -10 12 -16 2 -28z" />
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"
+        android:strokeColor="#58595b" />
     <path
-        android:fillColor="#000000"
+        android:pathData="M4.5 18.5l9 0"
         android:strokeWidth="1"
-        android:pathData="M783 350 c-87 -52 -83 -198 6 -245 98 -50 211 16 211 123 0 85 -56 142 -140 142
--27 0 -58 -8 -77 -20z m132 -65 c50 -49 15 -135 -55 -135 -41 0 -80 39 -80 80 0 41
-39 80 80 80 19 0 40 -9 55 -25z" />
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"
+        android:strokeColor="#58595b" />
+    <path
+        android:pathData="M19.5 18.5l3 0"
+        android:strokeWidth="1"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"
+        android:strokeColor="#58595b" />
+    <path
+        android:pathData="M19.5 15.5l3 0"
+        android:strokeWidth="1"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"
+        android:strokeColor="#58595b" />
+    <path
+        android:pathData="M19.5 12.5l3 0"
+        android:strokeWidth="1"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:strokeMiterLimit="10"
+        android:strokeColor="#58595b" />
 </vector>
