--- a/res/values/aos_strings.xml
+++ b/res/values/aos_strings.xml
@@ -65,4 +65,11 @@
     <string name="doze_notification_color_invert_summary_off">Notifications will not be inverted. Use for dark themes.</string>
     <string name="doze_notification_color_invert_summary_on">Notifications will be inverted. Use for light/stock theme.</string>
 
+    <!-- Device gestures and doze settings -->
+    <string name="device_gestures_title">Device gestures</string>
+    <string name="device_gestures_summary">Set up extra gestures for your device</string>
+
+    <string name="device_doze_title">Ambient display gestures</string>
+    <string name="device_doze_summary">Set up extra gestures for ambient display mode</string>
+
 </resources>
