--- a/res/xml/gesture_settings.xml
+++ b/res/xml/gesture_settings.xml
@@ -54,6 +54,12 @@
         settings:animation="@raw/gesture_ambient_lift"
         settings:preview="@drawable/gesture_ambient_lift"/>
 
+    <com.atomicos.laboratory.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_to_sleep_title"
+        android:summary="@string/double_tap_to_sleep_summary"
+        android:defaultValue="true" />
+
     <PreferenceScreen
         android:key="device_gestures"
         android:icon="@drawable/ic_settings_gestures"
