--- a/res/xml/ambient_settings.xml
+++ b/res/xml/ambient_settings.xml
@@ -10,6 +10,13 @@
         android:persistent="false" />
 
     <com.atomicos.laboratory.preference.SystemSettingSwitchPreference
+        android:key="double_tap_wake_doze"
+        android:title="@string/double_tap_wake_doze_title"
+        android:summary="@string/double_tap_wake_doze_summary"
+        android:defaultValue="true"
+        android:dependency="doze" />
+
+    <com.atomicos.laboratory.preference.SystemSettingSwitchPreference
         android:key="doze_overwrite_value"
         android:title="@string/doze_overwrite_value_title"
         android:summary="@string/doze_overwrite_value_summary"
