--- a/res/values/aos_strings.xml
+++ b/res/values/aos_strings.xml
@@ -24,4 +24,8 @@
     <string name="laboratory_title">Laboratory</string>
     <string name="header_category_custom">Customization</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
+
 </resources>
