Settings: Add volume tones back [2/2] This patch allows the users to choose if they want the audible tone when adjusting the volume
Signed-off-by: DarkKnight6499 <yazad.madan@gmail.com>

--- a/res/values/aos_strings.xml
+++ b/res/values/aos_strings.xml
@@ -187,4 +187,7 @@
     <string name="cyan">Scooter</string>
     <string name="grey">Grey</string>
     <string name="default_string">Default</string>
+
+    <!-- Volume settings - Volume adjustment sound --> 
+    <string name="volume_adjust_sounds_title">Volume adjustment sounds</string> 
 </resources>
